# SnipToLatex

./: .gitignore  README.md  pyproject.toml  requirements.txt  snip_to_clipboard.py  snip_to_latex.py
sniptolatex/: __init__.py  capture.py  config.py  controller.py  hotkeys.py  overlay.py  settings_dialog.py  toast.py
sniptolatex.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
sniptolatex/ai/: __init__.py  gemini.py  request.py
sniptolatex/ai/prompts/: gemini_image_to_latex.txt
